--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./call.js"> </script>
 </head>
 <body>
-    
+<div class="testdiv">
+    <p class="first">First</p>
+    <p class="second">Second</p>
+    <p class="third">Third</p>
+    <input type="text" class="textInput" value="">
+    <button class = "btn">Button</button>
+    <br><br>
+</div>
+    <script src="./script.js"></script>
 </body>
 </html>
