edited scripts eventlistener

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="testdiv">
-    <p class="first">First</p>
-    <p class="second">Second</p>
-    <p class="third">Third</p>
-    <input type="text" class="textInput" value="">
+    <p>First</p>
+    <p>Second</p>
+    <p>Third</p>
+    <input type="text" class="textInput">
     <button class = "btn">Button</button>
     <br><br>
 </div>
