--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <button class = "btn">Button</button>
     <br><br>
 </div>
-    <script src="./localstorage.js"></script>
+    <script src="./ClientServer.js"></script>
 </body>
 </html>
