--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Weather forecast</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-        <script src= "./main.js"></script>
+
+    <header class="header">
+            <h1 class="title">Weather forecast</h1>
+            
+            <form class="form">
+                <input type="text" class="input" placeholder="Enter city name">
+                <button class="btn">Show</button>
+            </form>
+
+    </header>
+
+    <script src= "./main.js"></script>
 </body>
 </html>
