--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,18 @@
 
     </header>
 
+    <div class="card">
+        <h2 class="card-city">Moscow <span>Russia</span></h2>
+
+        <div class="card-weather">
+            <div class="card-value">11°C</div>
+            <img class="card-img" src="./images/4.png" alt="weather">
+        </div>
+
+        <div class="card-desc">Cloudy</div>
+
+    </div>
+
     <script src= "./main.js"></script>
 </body>
 </html>
