--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,17 @@
         <h2 class="card-city">Moscow <span>Russia</span></h2>
 
         <div class="card-weather">
-            <div class="card-value">11°C</div>
+            <div class="card-value">11<sup>°C</sup></div>
             <img class="card-img" src="./images/4.png" alt="weather">
         </div>
 
         <div class="card-desc">Cloudy</div>
 
     </div>
+
+    <footer class="footer">
+        <a href="#" class="" target="_blank">Weather forecast</a>
+    </footer>
 
     <script src= "./main.js"></script>
 </body>
