--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
     <header class="header">
             <h1 class="title">Weather forecast</h1>
             
-            <form class="form">
-                <input type="text" class="input" placeholder="Enter city name">
+            <form class="form" id="form">
+                <input id="inputCity" type="text" class="input" placeholder="Enter city name">
                 <button class="btn">Show</button>
             </form>
 
