--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
     </header>
 
-    <div class="card">
+    <!-- <div class="card">
         <h2 class="card-city">Moscow <span>Russia</span></h2>
 
         <div class="card-weather">
@@ -33,7 +33,7 @@
 
         <div class="card-desc">Cloudy</div>
 
-    </div>
+    </div> -->
 
     <footer class="footer">
         <a href="#" class="" target="_blank">Weather forecast</a>
