add filename and condition add imgs

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
         <a href="#" class="" target="_blank">Weather forecast</a>
     </footer>
 
-    <script src= "./main.js"></script>
+    <script src= "./conditions.js" type="module"></script>
+    <script src= "./main.js" type="module"></script>
 </body>
 </html>
