--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Weather forecast</title>
-    <!-- <link rel="stylesheet" href="./css/main.css"> -->
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-
+    
     <header class="header">
             <h1 class="title">Weather forecast</h1>
             
@@ -33,6 +33,9 @@
 
         <div class="card-desc">Cloudy</div>
 
+    </div> -->
+    <!-- <div class="map">
+        <img class="img-map" src="https://maps.googleapis.com/maps/api/staticmap?center=Sankt-Petersburg&zoom=12&size=400x400&key=AIzaSyBXtNPlUvaj6wQD1bxS0vBd-RvUMMbvdZQ" alt="weathermap">
     </div> -->
 
     <footer class="footer">
