--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         <a href="#" class="" target="_blank">Weather forecast</a>
     </footer>
 
-    <script src= "./conditions.js" type="module"></script>
-    <script src= "./main.js" type="module"></script>
+    <script src= "./conditions.js" type="module" defer></script>
+    <script src= "./main.js" type="module" defer></script>
 </body>
 </html>
